--- a/css/style.css
+++ b/css/style.css
@@ -72,20 +72,18 @@ body {
     background-image: url(/images/Header-llustration-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1290px;
+    height: 1000px;
+    width: 100%;
   }
 
   .hero {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 180px 0;
+    padding: 210px;
     gap: 24px;
-    position: absolute;
     width: auto;
     height: auto;
-    margin-left: 400px;
-    margin-top: 72px;
   }
 
   .intro {
@@ -116,7 +114,8 @@ body {
   }
 
   .social {
-    margin-top: 60px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -144,7 +143,7 @@ body {
   .scroll-down {
     display: flex;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 40px;
     margin-left: 50px;
   }
 
