--- a/css/about-me.css
+++ b/css/about-me.css
@@ -30,6 +30,7 @@
     line-height: 32px;
     text-align: center;
     color: #42526e;
+    margin-bottom: 10px;
   }
 
   .resume-btn {
@@ -51,7 +52,7 @@
   }
 
   .btn-rsm {
-    margin: 40px;
+    margin:  30px;
   }
 
   .background-1 {
@@ -82,8 +83,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 360px;
+    height: auto;
     gap: 20px;
+    flex-wrap: wrap;
   }
 
   .about-me-cards {
@@ -94,6 +96,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 10px;
   }
 
   .about-me-cards img {
@@ -214,6 +217,7 @@
     justify-items: center;
     width: 327px;
     height: 1200px;
+
   }
 
   .about-me-cards {
