--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,9 @@ body {
     background-image: url(/images/Header-llustration-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1000px;
+    background-position: center;
+    background-position-y: 5px;
+    height: 150vh;
     width: 100%;
   }
 
