--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -30,6 +30,7 @@
     border-radius: 8px 8px 0 0;
   }
 
+
   .prj {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -46,6 +47,9 @@
     border-radius: 8px;
   }
 
+  .card:hover {
+	  transform: scale(1.05);
+  }
   .card-title h1 {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
