--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,22 @@ body {
     line-height: 60px;
     text-align: center;
     letter-spacing: 0.37px;
+    animation-duration: 3s;
+    animation-name: slidein;
   }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+
 
   .support-text {
     font-style: normal;
