--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
   }
 
   .container {
-    background-image: url(/images/Header-llustration-desktop.svg);
+    background-image: url(./images/Header-llustration-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
