--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,10 @@ body {
 
 /* Mobile */
 @media screen and (max-width: 480px) {
+  * {
+    box-sizing: border-box;
+  }
+
   body {
     background-color: var(--white);
     font-family: 'Inter', sans-serif;
@@ -193,7 +197,37 @@ body {
   }
 
   .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+    width: 375px;
+    padding: 2rem;
+  }
+
+  .menu ul {
+    width: 100%;
+  }
+
+  .menu ul li {
+    padding: 1rem;
+    padding-top: 2rem;
+  }
+
+  .menu ul a {
+    text-decoration: none;
+    color: #3A4A42;
+    height: 24px;
+    font-weight: 600;
+    font-size: 32px;
+  }
+
+  .navbar-links {
     display: none;
+  }
+
+  .navbar-links.active {
+    display: flex;
+    height: 100vh;
   }
 
   /* container */
@@ -203,21 +237,10 @@ body {
     justify-content: flex-start;
     align-items: center;
     height: 667px;
-    width: 375px;
+    width: 100%;
   }
 
   /* nav-bar */
-  .nav-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 375px;
-    height: 48px;
-    padding-top: 44px;
-    padding-bottom: 20px;
-  }
-
   .welcome {
     font-weight: 600;
     font-size: 20px;
@@ -230,20 +253,13 @@ body {
   }
 
   .ham-menu {
+    padding-right: 1rem;
+    padding-left: 320px;
     display: flex;
     align-items: flex-start;
-    padding: 8px;
-    padding-right: 24px;
+    position: absolute;
   }
 
-  .pop-up {
-    display: block;
-    z-index: 1;
-  }
-
-  .mobile-menu {
-    display: none;
-  }
 
   /* intro-section */
   .background {
