--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,6 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
-    z-index: 1;
   }
 
   .x-icon {
@@ -211,15 +210,17 @@ body {
   .menu ul li {
     padding: 1rem;
     padding-top: 2rem;
+    width: 100%;
   }
 
-  .menu ul a {
+  .menu ul li a {
     text-decoration: none;
-    color: #3A4A42;
+    color: #3a4a42;
     height: 24px;
     font-weight: 600;
     font-size: 32px;
     margin: 2rem;
+    width: 100%;
   }
 
   .navbar-links {
@@ -231,8 +232,6 @@ body {
     flex-direction: column;
     height: 100vh;
     position: relative;
-    z-index: 2;
-    overflow-y: auto;
   }
 
   /* container */
@@ -265,7 +264,6 @@ body {
     align-items: flex-start;
     position: absolute;
   }
-
 
   /* intro-section */
   .background {
