--- a/css/projects.css
+++ b/css/projects.css
@@ -26,7 +26,6 @@ body {
     margin-top: 20px;
     margin-bottom: 50px;
     padding: 16px;
-    padding-left: calc(50% - 343px/2);
     gap: 12px;
 }
 
@@ -38,6 +37,7 @@ body {
 }
 
 .close {
+    all: unset;
     color: #fff;
     position: absolute;
     border: none;
@@ -49,7 +49,7 @@ body {
     display: block;
     font-size: 40px;
     border-radius: 100%;
-    
+
 }
 
 .project-popup h1 {
@@ -121,6 +121,7 @@ body {
 }
 
 .pop-buttons a button {
+    all: initial;
     border: none;
     font-weight: 500;
     font-size: 17px;
@@ -129,4 +130,8 @@ body {
     letter-spacing: 0.03em;
     color: #FFFFFF;
     background: transparent;
+}
+
+.pop-buttons a button:hover {
+    background-color: transparent !important;
 }
