--- a/css/projects.css
+++ b/css/projects.css
@@ -16,28 +16,56 @@ body {
 
 .project-popup {
     font-family: 'Inter';
-    height: auto;
+    height: 100vh;
+    width: 90%;
+    padding: 16px;
+    top: 50%;
+    left: 50%;
+    position: fixed;
+
+    margin-bottom: 40px;
+    align-items: flex-start;
+
+    flex-direction: column;
+    gap: 12px;
+
     background-color: #fff;
     border: 1px solid #DFE1E6;
     border-radius: 16px;
-    flex-direction: column;
-    position: absolute;
-    align-items: flex-start;
-    margin: 16px;
-    margin-top: 20px;
-    margin-bottom: 50px;
-    padding: 16px;
-    gap: 12px;
     z-index: 10;
+    transform: translate(-50%, -50%);
     transition: 0.5s ease-in-out;
+    overflow-y: scroll;
 }
 
 .project-popup.active {
     transform: translate(-50%, -50%) scale(1);
 }
 
+
+.project-popup.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.overlay {
+    background-color: #979493;
+    mix-blend-mode: multiply;
+    pointer-events: none;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
 .img-placeholder {
-    width: 100%;
+    width: 90%;
     height: 220px;
     background-color: #b1b5bc;
     border-radius: 8px;
@@ -55,6 +83,7 @@ body {
     display: block;
     font-size: 40px;
     border-radius: 100%;
+    overflow-y: scroll;
 
 }
 
@@ -154,13 +183,8 @@ body {
         left: 50%;
         position: fixed;
         align-items: flex-start;
-        /* margin: 16px;
-        margin-top: 20px;
-        margin-bottom: 50px;
-        margin-left: 20%; */
         width: 70%;
-        /* padding: 16px;
-        gap: 12px; */
+        gap: 12px;
         z-index: 10;
         transform: translate(-50%, -50%);
         transition: 0.5s ease-in-out;
@@ -171,7 +195,7 @@ body {
     }
 
     .img-placeholder {
-        width: 100%;
+        width: 127%;
         height: 220px;
         background-color: #b1b5bc;
         border-radius: 8px;
