--- a/css/forms.css
+++ b/css/forms.css
@@ -111,6 +111,14 @@
   }
 }
 
+.error {
+  color: #c92c2c;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 8px
+}
+
+
 @media screen and (max-width: 480px) {
   .form-section {
     display: flex;
@@ -213,5 +221,13 @@
 
   #less {
     margin-top: 0;
+  }
+
+  .error {
+    color: #c92c2c;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 8px;
+    animation: 2s ease-in-out;
   }
 }
