--- a/css/forms.css
+++ b/css/forms.css
@@ -115,9 +115,8 @@
   color: #c92c2c;
   font-size: 20px;
   font-weight: 600;
-  margin: 8px
+  margin: 8px;
 }
-
 
 @media screen and (max-width: 480px) {
   .form-section {
