--- a/css/projects.css
+++ b/css/projects.css
@@ -1,193 +1,49 @@
 /* The main css for the projects page */
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .dflex {
-  display: flex;
+    display: flex;
+}
+
+.desktoponly {
+    display: none;
 }
 
 .font-fam {
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
 }
 
 .project-popup {
-  font-family: 'Inter', sans-serif;
-  height: 100vh;
-  width: 90%;
-  padding: 16px;
-  top: 50%;
-  left: 50%;
-  position: fixed;
-  margin-bottom: 40px;
-  align-items: flex-start;
-  flex-direction: column;
-  gap: 12px;
-  background-color: #fff;
-  border: 1px solid #dfe1e6;
-  border-radius: 16px;
-  z-index: 10;
-  transform: translate(-50%, -50%);
-  transition: 0.5s ease-in-out;
-  overflow-y: scroll;
-}
-
-.project-popup.active {
-  transform: translate(-50%, -50%) scale(1);
-}
-
-.overlay {
-  background-color: #979493;
-  mix-blend-mode: multiply;
-  pointer-events: none;
-  opacity: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-.overlay.active {
-  opacity: 1;
-  pointer-events: all;
-}
-
-.img-placeholder {
-  width: 90%;
-  height: 220px;
-  background-color: #b1b5bc;
-  border-radius: 8px;
-}
-
-.close {
-  color: #fff;
-  position: absolute;
-  border: none;
-  background-color: transparent;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  outline: none;
-  display: block;
-  font-size: 40px;
-  border-radius: 100%;
-}
-
-.project-popup h1 {
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 44px;
-  color: #172b4d;
-  text-align: start;
-  padding-right: 68px;
-}
-
-.prj-lang {
-  flex-direction: row;
-  align-items: center;
-  gap: 20px;
-}
-
-.lang {
-  padding: 8px 12px;
-  background-color: #ebf0ee;
-  border-radius: 4px;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  color: #3a4a42;
-  outline: none;
-  border: none;
-}
-
-.dets {
-  text-align: start;
-}
-
-.dets h2 {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: #344563;
-}
-
-.pop-buttons {
-  flex-direction: row;
-  border-radius: 4px;
-  margin-bottom: 20px;
-  align-items: center;
-  width: 100%;
-  gap: 20px;
-}
-
-.pop-buttons a {
-  text-decoration: none;
-  background-color: #36b37f;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  padding: 0 5px 0 5px;
-  gap: 12px;
-  width: 141px;
-  height: 48px;
-  left: 0;
-  top: 4px;
-  border-radius: 4px;
-}
-
-.pop-buttons a button {
-  all: initial;
-  border: none;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 24px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #fff;
-  background: transparent;
-}
-
-.pop-buttons a button:hover {
-  background-color: transparent !important;
-}
-
-@media screen and (min-width: 480px) {
-  .project-popup {
     font-family: 'Inter', sans-serif;
-    height: auto;
-    background-color: #fff;
-    border: 1px solid #dfe1e6;
-    border-radius: 16px;
-    flex-direction: column;
+    height: 100vh;
+    width: 90%;
+    padding: 16px;
     top: 50%;
     left: 50%;
     position: fixed;
+    margin-bottom: 40px;
     align-items: flex-start;
-    width: 70%;
+    flex-direction: column;
     gap: 12px;
+    background-color: #fff;
+    border: 1px solid #dfe1e6;
+    border-radius: 16px;
     z-index: 10;
     transform: translate(-50%, -50%);
     transition: 0.5s ease-in-out;
-  }
+    overflow-y: scroll;
+}
 
-  .project-popup.active {
+.project-popup.active {
     transform: translate(-50%, -50%) scale(1);
-  }
+}
 
-  .img-placeholder {
-    width: 127%;
-    height: 220px;
-    background-color: #b1b5bc;
-    border-radius: 8px;
-  }
-
-  .overlay {
+.overlay {
     background-color: #979493;
     mix-blend-mode: multiply;
     pointer-events: none;
@@ -197,16 +53,17 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-  }
+}
 
-  .overlay.active {
+.overlay.active {
     opacity: 1;
     pointer-events: all;
-  }
+}
 
-  .close {
+.close {
     color: #fff;
     position: absolute;
+    float: right;
     border: none;
     background-color: transparent;
     width: 40px;
@@ -215,25 +72,39 @@ body {
     outline: none;
     display: block;
     font-size: 40px;
+    margin-top: 25px;
+    margin-left: 80%;
     border-radius: 100%;
-  }
+}
 
-  .project-popup h1 {
+.project-popup h1 {
     font-weight: 600;
     font-size: 32px;
     line-height: 44px;
     color: #172b4d;
     text-align: start;
     padding-right: 68px;
-  }
+}
 
-  .prj-lang {
+.img-placeholder {
+    width: 100%;
+    height: 50%;
+    border-radius: 8px;
+}
+
+.img-placeholder img {
+    width: 100%;
+    border-radius: 8px;
+    margin-top: 20px;
+}
+
+.prj-lang {
     flex-direction: row;
     align-items: center;
     gap: 20px;
-  }
+}
 
-  .lang {
+.lang {
     padding: 8px 12px;
     background-color: #ebf0ee;
     border-radius: 4px;
@@ -244,29 +115,29 @@ body {
     color: #3a4a42;
     outline: none;
     border: none;
-  }
+}
 
-  .dets {
+.dets {
     text-align: start;
-  }
+}
 
-  .dets h2 {
+.dets h2 {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: #344563;
-  }
+}
 
-  .pop-buttons {
+.pop-buttons {
     flex-direction: row;
     border-radius: 4px;
     margin-bottom: 20px;
     align-items: center;
     width: 100%;
     gap: 20px;
-  }
+}
 
-  .pop-buttons a {
+.pop-buttons a {
     text-decoration: none;
     background-color: #36b37f;
     display: flex;
@@ -280,9 +151,11 @@ body {
     left: 0;
     top: 4px;
     border-radius: 4px;
-  }
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
 
-  .pop-buttons a button {
+.pop-buttons a button {
     all: initial;
     border: none;
     font-weight: 500;
@@ -292,9 +165,154 @@ body {
     letter-spacing: 0.03em;
     color: #fff;
     background: transparent;
-  }
+}
 
-  .pop-buttons a button:hover {
+.pop-buttons a button:hover {
     background-color: transparent !important;
-  }
+}
+
+@media screen and (min-width: 768px) {
+    .dflex {
+        display: flex;
+    }
+
+    .project-popup {
+        font-family: 'Inter', sans-serif;
+        width: 65%;
+        background-color: #fff;
+        border: 1px solid #dfe1e6;
+        border-radius: 16px;
+        flex-direction: column;
+        top: 50%;
+        left: 50%;
+        position: fixed;
+        align-items: flex-start;
+        gap: 12px;
+        z-index: 10;
+        transform: translate(-50%, -50%);
+        transition: 0.5s ease-in-out;
+    }
+
+    .project-popup.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .img-placeholder {
+        width: 812px;
+        height: 616px;
+        border-radius: 8px;
+    }
+
+    .img-placeholder img {
+        width: 100%;
+        border-radius: 8px;
+        margin-top: 20px;
+    }
+
+    .overlay {
+        background-color: #979493;
+        mix-blend-mode: multiply;
+        pointer-events: none;
+        opacity: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    .overlay.active {
+        opacity: 1;
+        pointer-events: all;
+    }
+
+    .close {
+        position: relative;
+        background-color: #EBECF0;
+        cursor: pointer;
+        display: flex;
+        float: right;
+    }
+
+    .project-popup h1 {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 44px;
+        color: #172b4d;
+        text-align: start;
+        flex-basis: 60%;
+    }
+
+    .prj-lang {
+        flex-direction: row;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
+    .lang {
+        padding: 8px 12px;
+        background-color: #ebf0ee;
+        border-radius: 4px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        color: #3a4a42;
+        outline: none;
+        border: none;
+    }
+
+    .dets {
+        text-align: start;
+    }
+
+    .dets h2 {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #344563;
+    }
+
+    .pop-buttons {
+        display: none;
+    }
+
+    .btn {
+        border: none;
+        font-weight: 500;
+        font-size: 17px;
+        text-align: center;
+        background-color: #36b37f;
+        color: #fff;
+
+    }
+
+    .desktoponly {
+        text-decoration: none;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        padding: 0 5px 0 5px;
+        gap: 20px;
+        width: 141px;
+        flex-basis: 40%;
+    }
+
+    .desktoponly a:hover {
+        cursor: pointer;
+    }
+
+    .desktoponly a button:hover {
+        cursor: pointer;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
 }
